CAMEL-18193: camel-language - Language component should load resource from classpath by default